--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,65 @@
 /* You can add global styles to this file, and also import other style files */
+@import './app/stylesheets/theme.scss';
+@import './app/stylesheets/fonts.scss';
+
+//Gloabal Element Styles
+
+html, body { 
+    height: 100%; 
+    background-color: $light-shade;
+    margin: 0;
+}
+
+mat-icon {
+    font-family: 'Material Icons' !important;
+}
+
+.fill-remaining-space {
+    flex: 1 1 auto;
+}
+
+.form-float-left {
+    margin-left: 80px;
+    float: left;
+}
+
+.form-float-right {
+    margin-right: 80px;
+    float: right;
+}
+
+.form-radio-btn {
+    margin-left: 8px;
+    margin-top: 16px;
+}
+
+.mat-divider-right-margin {
+    margin-right: 80px !important;
+}
+
+.title-toolbar {
+    height: 48px !important;
+    z-index: 1;
+    padding-left: 32px;
+}
+
+.side-nav-link {
+    padding: 2px 4px 2px 4px;
+    margin-left: 8px;
+    text-decoration: underline;
+    font-size: 16px;
+    color: $light-shade;
+}
+
+/*
+a:first-child {
+    margin-left: 0;
+}
+
+a:hover {
+    opacity: .6;
+}
+
+a:visited {
+    color: darken($primary-default, 15%);
+}*/
