--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 <mat-grid-list cols="5">
 
   <mat-grid-tile>
-    <mat-card routerLink="../software-user">
+    <mat-card>
       <img src="../../../assets/images/dashboard/learning.png" class="dashboard-card-img">
       <mat-card-header>
         <mat-card-title> Software User </mat-card-title>
@@ -12,6 +12,8 @@
       <mat-card-content>
         <br>
         <mat-divider [inset]="true"></mat-divider>
+        <br>
+        (Coming Soon)
         <br><br>
         Lookup Available Software Packages
         <br><br>
@@ -23,7 +25,7 @@
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <mat-card routerLink="../shipping-receiving">
+    <mat-card routerLink="../shipping-receiving" class="selectable">
       <img src="../../../assets/images/dashboard/warehouse.png" class="dashboard-card-img">
       <mat-card-header>
         <mat-card-title> Shipping & Receiving </mat-card-title>
@@ -42,7 +44,7 @@
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <mat-card routerLink="../maintenance">
+    <mat-card routerLink="../maintenance" class="selectable">
       <img src="../../../assets/images/dashboard/maintenance.png" class="dashboard-card-img">
       <mat-card-header>
         <mat-card-title> Maintenance </mat-card-title>
@@ -64,7 +66,7 @@
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <mat-card routerLink="../management">
+    <mat-card routerLink="../management" class="selectable">
       <img src="../../../assets/images/dashboard/hierarchical-structure.png" class="dashboard-card-img">
       <mat-card-header>
         <mat-card-title> Management </mat-card-title>
@@ -72,6 +74,8 @@
       <mat-card-content>
         <br>
         <mat-divider [inset]="true"></mat-divider>
+        <br>
+        (Coming Soon)
         <br><br>
         Create, Update & Delete Employees
         <br><br>
@@ -83,7 +87,7 @@
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <mat-card routerLink="../faculty-staff">
+    <mat-card>
       <img src="../../../assets/images/dashboard/id-card.png" class="dashboard-card-img"> 
       <mat-card-header>
         <mat-card-title> Faculty & Staff </mat-card-title>
@@ -91,6 +95,8 @@
       <mat-card-content>
         <br>
         <mat-divider [inset]="true"></mat-divider>
+        <br>
+        (Coming Soon)
         <br><br>
         Submit Software Inquiries
         <br><br>
