--- a/src/app/components/shipping-receiving/add-computer/add-computer.component.scss
+++ b/src/app/components/shipping-receiving/add-computer/add-computer.component.scss
@@ -12,6 +12,10 @@ mat-vertical-stepper {
     margin-top: 32px;
 }
 
+.left-margin {
+    margin-left: 16px !important;
+}
+
 .stepper-button {
     width: 100%;
     margin-top: 16px;
