--- a/src/app/components/management/management.component.html
+++ b/src/app/components/management/management.component.html
@@ -1,3 +1,17 @@
-<p>
-  management works!
-</p>
+<mat-toolbar color="primary" class="title-toolbar">Management</mat-toolbar>
+
+
+<mat-sidenav-container id="sidenav-container"
+  (backdropClick)="sidenav.close()" fullscreen>
+  <mat-sidenav #sidenav (keydown.escape)="sidenav.close()" layout-align="center" disableClose>
+    <a routerLink='installed-computers' class="side-nav-link mat-tab-link" (click)="sidenav.close()">Installed Software Report</a>
+    <br><br>
+    <button mat-button (click)="sidenav.close()" id="close-side-nav-btn">Close</button>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <button mat-button id="open-side-nav-btn" (click)="sidenav.open()"> Select Report </button>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
