--- a/src/app/components/shipping-receiving/add-computer/add-computer.component.html
+++ b/src/app/components/shipping-receiving/add-computer/add-computer.component.html
@@ -1,4 +1,4 @@
-<p class='mat-headline center'>Add New Computer Form</p>
+<p class='mat-headline center form-top-margin'>Add New Computer Form</p>
 <mat-divider [inset]="true" class='mat-divider-right-margin'></mat-divider>
 
 <mat-vertical-stepper #addComputerStepper [linear]="true">
