--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -12,14 +12,8 @@
       <mat-card-content>
         <br>
         <mat-divider [inset]="true"></mat-divider>
-        <br>
+        <br><br>
         (Coming Soon)
-        <br><br>
-        Lookup Available Software Packages
-        <br><br>
-        Report Issues with Software
-        <br><br>
-        Report Issues with Hardware
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
@@ -34,9 +28,7 @@
         <br>
         <mat-divider [inset]="true"></mat-divider>
         <br><br>
-        Log New Arrivals
-        <br><br>
-        View Scheduled Deliveries
+        Add New Computer
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
@@ -51,13 +43,7 @@
         <br>
         <mat-divider [inset]="true"></mat-divider>
         <br><br>
-        View Current Inventory
-        <br><br>
-        Install New Computers & Hardware
-        <br><br>
-        View & Fulfill Work Orders
-        <br><br>
-        Remove Broken Systems
+        View Installed Computers
       </mat-card-content>
       
     </mat-card>
@@ -72,12 +58,8 @@
       <mat-card-content>
         <br>
         <mat-divider [inset]="true"></mat-divider>
-        <br>
-        (Coming Soon)
         <br><br>
-        Create, Update & Delete Employees
-        <br><br>
-        Request Master Reports
+        View Installed Software
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
@@ -91,14 +73,8 @@
       <mat-card-content>
         <br>
         <mat-divider [inset]="true"></mat-divider>
-        <br>
+        <br><br>
         (Coming Soon)
-        <br><br>
-        Submit Software Inquiries
-        <br><br>
-        Submit Hardware & Computer Inquiries
-        <br><br>
-        View Status of Inquiries
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
