--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,10 @@ mat-icon {
     float: right;
 }
 
+.form-top-margin {
+    margin-top: 16px;
+}
+
 .form-radio-btn {
     margin-left: 8px;
     margin-top: 16px;
@@ -50,6 +54,27 @@ mat-icon {
     font-size: 16px;
     color: $light-shade;
 }
+
+*::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar-thumb
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: darken($light-shade, 5%);
+}
+
 
 /*
 a:first-child {
