--- a/src/app/components/management/management.component.scss
+++ b/src/app/components/management/management.component.scss
@@ -1,5 +1,9 @@
 @import '../../../styles.scss';
 
+mat-form-field {
+    width: 256px;
+}
+
 mat-sidenav {
     padding: 32px 32px 0px 16px;
     background-color: lighten($primary-default, 5%) !important;
