--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,10 @@ mat-icon {
     flex: 1 1 auto;
 }
 
+.float-left {
+    float: left;
+}
+
 .form-float-left {
     margin-left: 80px;
     float: left;
