--- a/src/app/components/maintenance/installed-computers/installed-computers.component.html
+++ b/src/app/components/maintenance/installed-computers/installed-computers.component.html
@@ -10,31 +10,30 @@
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field>
-
+  <mat-form-field class="form-float-left form-top-margin" required>
+      <mat-label>Add Column</mat-label>
+      <mat-select (selectionChange)="addInstalledTableColumn($event.value)">
+          <mat-option *ngFor="let column of allInstalledColumns" [value]="column">
+              {{column}}
+          </mat-option>
+      </mat-select> 
+  </mat-form-field>
+  <mat-form-field class="form-float-left form-top-margin" required>
+      <mat-label>Remove Column</mat-label>
+      <mat-select (selectionChange)="removeInstalledTableColumn($event.value)">
+          <mat-option *ngFor="let column of installedTableDisplay" [value]="column">
+              {{column}}
+          </mat-option>
+      </mat-select> 
+  </mat-form-field>
+  
   <table mat-table class="full-table" #installedSort="matSort" matSort [dataSource]="installedTableData">
 
-    <!-- Building Column -->
-    <ng-container matColumnDef="building">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Building </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.building}} </td>
-    </ng-container>
-
-    <!-- Room Column -->
-    <ng-container matColumnDef="room">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Room </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.room}} </td>
-    </ng-container>
-
-    <!-- Brand Column -->
-    <ng-container matColumnDef="brand">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Brand </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.brand}} </td>
-    </ng-container>
-
-    <!-- Type Column -->
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.type}} </td>
+    <ng-container [matColumnDef]="column" *ngFor="let column of installedTableDisplay">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{column}}
+      </th>
+      <td mat-row class="mat-cell" *matCellDef="let entry">{{entry[column]}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="installedTableDisplay"></tr>
@@ -50,19 +49,30 @@
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field>
+  <mat-form-field class="form-float-left form-top-margin" required>
+    <mat-label>Add Column</mat-label>
+    <mat-select (selectionChange)="addStorageTableColumn($event.value)">
+      <mat-option *ngFor="let column of allStorageColumns" [value]="column">
+        {{column}}
+      </mat-option>
+    </mat-select> 
+  </mat-form-field>
+  <mat-form-field class="form-float-left form-top-margin" required>
+    <mat-label>Remove Column</mat-label>
+    <mat-select (selectionChange)="removeStorageTableColumn($event.value)">
+      <mat-option *ngFor="let column of storageTableDisplay" [value]="column">
+        {{column}}
+      </mat-option>
+    </mat-select> 
+  </mat-form-field>
 
   <table mat-table class="full-table" #storageSort="matSort" matSort [dataSource]="storageTableData">
 
-    <!-- Brand Column -->
-    <ng-container matColumnDef="brand">
-      <th mat-header-cell *matHeaderCellDef> Brand </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.brand}} </td>
-    </ng-container>
-
-    <!-- Type Column -->
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
-      <td mat-cell *matCellDef="let entry"> {{entry.type}} </td>
+    <ng-container [matColumnDef]="column" *ngFor="let column of storageTableDisplay">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{column}}
+      </th>
+      <td mat-row class="mat-cell" *matCellDef="let entry">{{entry[column]}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="storageTableDisplay"></tr>
