--- a/src/app/components/shipping-receiving/shipping-receiving.component.html
+++ b/src/app/components/shipping-receiving/shipping-receiving.component.html
@@ -10,7 +10,7 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <button mat-button id="open-side-nav-btn" (click)="sidenav.open()"> Select Form </button>
+    <button mat-button id="open-side-nav-btn" (click)="sidenav.open()"><mat-icon>menu</mat-icon></button>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
