--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -56,3 +56,34 @@ mat-grid-tile {
     font-size: 18px;
     color: $dark-shade;
 }
+
+@media screen and (max-width: 480px) {
+
+    mat-card {
+        width: 100%;
+        background-color: darken($light-shade, 3%) !important;
+        border: 2px solid darken($light-shade, $amount: 10%)
+    }
+
+    mat-grid-list {
+        padding-bottom: 0 !important;
+    }
+
+    .dashboard-card-img {
+        width: 96px;
+        margin: 0 auto;
+        position: relative;
+        top: -24px;
+        
+        left: -webkit-calc(50% - 48px); //Chrome
+        left: -moz-calc(50% - 48px); //firefox
+        left: calc(50% - 48px); //IE
+    }
+
+    .mat-grid-tile .mat-figure {
+        align-items: flex-start;
+        bottom: auto;
+        height: 30% !important;
+    }
+    
+}
