--- a/src/app/components/management/installed-software/installed-software.component.html
+++ b/src/app/components/management/installed-software/installed-software.component.html
@@ -49,7 +49,7 @@
         </mat-form-field>
         <mat-form-field class="form-float-left form-top-margin" required>
             <mat-label>Add Column</mat-label>
-            <mat-select (selectionChange)="addAvailableTableColumn($event.value)">
+            <mat-select (selectionChange)="addUnvailableTableColumn($event.value)">
                 <mat-option *ngFor="let column of allUnavailableColumns" [value]="column">
                     {{column}}
                 </mat-option>
