--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,24 +59,17 @@ mat-icon {
     color: $light-shade;
 }
 
-*::-webkit-scrollbar-track
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+*::-webkit-scrollbar-track {
+	background-color: #cdc2d9;
+}
+
+*::-webkit-scrollbar {
+	width: 4px;
 	background-color: #F5F5F5;
 }
 
-*::-webkit-scrollbar
-{
-	width: 8px;
-	background-color: #F5F5F5;
-}
-
-*::-webkit-scrollbar-thumb
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: darken($light-shade, 5%);
+*::-webkit-scrollbar-thumb {
+	background-color: #573280;
 }
 
 
