--- a/src/app/components/software-user/training/training.component.html
+++ b/src/app/components/software-user/training/training.component.html
@@ -1,5 +1,5 @@
 <div class="header-container">
-  <p class="mat-display-3" id="training-header">Software Training</p>
+  <p class="mat-display-3" id="training-header">Training</p>
   <p class="mat-body-1">{{user}}'s Courses</p>
 </div>
 
