--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,27 +1,43 @@
-<div class="login-form-container">
+<div id="login-background">
 
 <p class="mat-display-2" id="login-header">Login</p>
 
-<form [formGroup]="loginForm" (ngSubmit)="login()">
+<mat-card id="login-card">
+<mat-card-header>
+  <p class="mat-card-header">Login to your Account</p>
+</mat-card-header>
+<mat-card-content>
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
 
-  <mat-form-field required class="form-input">
-      <input matInput formControlName="username" placeholder="Username" required>
-  </mat-form-field>
+    <mat-form-field required appearance="outline" class="form-input">
+      <mat-label>Username</mat-label>
+      <input matInput formControlName="username" required>
+    </mat-form-field>
 
-  <mat-form-field required class="form-input">
-      <input matInput type="password" formControlName="password" placeholder="Password" required>
-  </mat-form-field>
+    <mat-form-field required appearance="outline" class="form-input">
+      <mat-label>Password</mat-label>
+      <input matInput type="password" formControlName="password" required>
+    </mat-form-field>
+    <br>
+    <button mat-raised-button type="submit" color="primary">Login</button>
+    <button mat-raised-button type="button" (click)="clearInput()" class="cancel-btn">Cancel</button>
 
-  <button mat-raised-button type="submit" color="primary" class="submit-btn">Submit</button>
+  </form>
+  <br>
+  <button class="link-button" (click)="forgotPassword()">Forgot your Password?</button>
+</mat-card-content>
 
-</form>
-</div>
+
+</mat-card>
 
 
 <div class="demo-credentials">
   <button mat-flat-button (click)="toggleCredentials()">{{state}} Credentials</button>
   <div [style.visibility]="isHidden ? 'hidden' : 'visible'">
-    <p class="mat-body-strong">Username: SU-Teacher</p>
-    <p class="mat-body-strong">Password: SecurePass</p>
+    <mat-card id="credential-card">
+      <p class="mat-body-strong"><strong>Username:</strong> SU-User </p>
+      <p class="mat-body-strong"><strong>Password:</strong> SecurePass</p>
+    </mat-card>
   </div>
+</div>
 </div>
