--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,13 +1,8 @@
 @import '../../../styles.scss';
 
-.mat-card-content {
-    text-align: center;
-}
-
-.mat-card-header {
-    display: block;
-    text-align: center;
-    font-size: 18px;
+.cancel-btn {
+    margin-top: 16px;
+    margin-left: 16px;
 }
 
 .demo-credentials {
@@ -21,33 +16,55 @@
     margin: 0 auto;
 }
 
+.left-container {
+    flex: 0 1 50%;
+    min-height: 100%;
+    max-width: 50%;
+}
+
 .link-button {
-    background:none!important;
-    color:inherit;
-    border:none; 
-    padding:0!important;
+    background: none !important;
+    color: inherit;
+    border: none; 
+    padding: 0 !important;
     font: inherit;
-    /*border is optional*/
-    border-bottom:1px solid #444; 
+    border-bottom: 1px solid #444; 
     cursor: pointer;
 }
 
-.cancel-btn {
-    margin-top: 16px;
-    margin-left: 16px;
+.main-container {
+    display: flex;
+    text-align: center
+}
+
+.mat-card-content {
+    text-align: center;
+}
+
+.mat-card-header {
+    display: block;
+    text-align: center;
+    font-size: 18px;
+}
+
+.right-container {
+   flex: 0 1 50%;
+   min-height: 100%;
+   max-width: 50%; 
 }
 
 #credential-card {
-    width: 256px;
+    width: 512px;
     margin: 0 auto;
     margin-top: 8px;
     background-color: $light-shade;
 }
 
 #login-background {
-    background-color: $primary-default;
     height: 85vh;
     width: 100%;
+    padding-top: 32px;
+    background-color: $primary-default;
 }
 
 #login-card {
